<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/dimen_30"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_12"
            android:gravity="right"
            android:text="@string/title"/>

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dimen_5"
            android:textSize="@dimen/font_12"
            android:layout_marginRight="@dimen/dimen_5"
            android:hint="@string/enter_appointment_title"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5"
        android:layout_marginBottom="@dimen/dimen_5">

        <TextView
            android:layout_width="@dimen/dimen_30"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_12"
            android:gravity="right"
            android:text="@string/date"/>

        <EditText
            android:id="@+id/text_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dimen_5"
            android:textSize="@dimen/font_12"
            android:inputType="date"
            android:clickable="false"
            android:focusable="false"
            android:editable="false"
            android:layout_marginRight="@dimen/dimen_5"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_12"
            android:text="@string/description"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginRight="@dimen/dimen_5"/>

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_12"
            android:hint="@string/enter_appointment_description"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_get_synonyms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_synonyms"/>

            <Button
                android:id="@+id/button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginStart="@dimen/dimen_10"
                android:onClick="doCreateAppointment"
                android:text="@string/create_appointment"/>


        </LinearLayout>

        <ListView
            android:id="@+id/list_synonyms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"/>

    </LinearLayout>

</LinearLayout>
