<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_5"
        android:textSize="@dimen/font_14"
        android:textColor="@android:color/black"
        android:text="@string/calender"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/dimen_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:onClick="doCreateAppointment"
                android:drawableLeft="@drawable/ic_add_black_24dp"
                android:drawableStart="@drawable/ic_add_black_24dp" />

            <Button
                android:id="@+id/button_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_edit"
                android:onClick="doEditAppointment"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:drawableLeft="@drawable/ic_edit_black_24dp"
                android:drawableStart="@drawable/ic_edit_black_24dp" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:onClick="doDeleteAppointment"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:drawableLeft="@drawable/ic_delete_black_24dp"
                android:drawableStart="@drawable/ic_delete_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move"
                android:onClick="doMoveAppointment"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:drawableLeft="@drawable/ic_up_movement"
                android:drawableStart="@drawable/ic_up_movement" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:onClick="doSearchAppointment"
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                android:drawableStart="@drawable/ic_search_black_24dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
